--- a/src/app/shared/event/event.component.html
+++ b/src/app/shared/event/event.component.html
@@ -1,38 +1,49 @@
-<div class="event rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100" *ngIf="isOpen">
-	<div class="header">
-		<span *ngIf="!(event?.startDate | isMultipleDay: event?.endDate)"
-			  class="px-1 py-0.5 bg-indigo-100 rounded-md mr-1.5 text-center">
-		  {{ event?.startDate | date: 'HH:mm':'UTC' }}
-			<span *ngIf="event?.startDate | isEndDateEqualStartDate: event?.endDate">-
-				{{ event?.endDate | date: 'HH:mm':'UTC' }}
-		  </span>
-		</span>
-		<span class="event-title mb-0.5 font-bold">{{ event?.title }}
-		</span>
-	</div>
-	<div class="content mb-2">
-		<div class="event-description line-clamp-2 text-sm">{{ event?.description }}
-		</div>
-
-		<div *ngIf="hasParticipant()" class="flex flex-row gap-1 my-0.5">
-			<span class="text-bold">
-				Participants :
-			</span>
-			<app-event-user *ngFor="let user of event?.inUser" [user]="user"></app-event-user>
-		</div>
-	</div>
-	<hr>
-	<div class="my-2 flex flex-row gap-1">
-		<button class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
-				(click)="editEvent()">Editer
-		</button>
-		<button
-			class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
-			(click)="deleteEvent()">Supprimer
-		</button>
-	</div>
-	<div class="absolute right-2.5 top-2.5">
-		<button class="text-slate-900 font-extrabold" (click)="closeEvent()">X</button>
-	</div>
-</div>
-<app-edit-event *ngIf="isOpen && isEditOpen" [event]="event"></app-edit-event>
+@if (isOpen) {
+  <div class="event rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100">
+    <div class="header">
+      @if (!(event?.startDate | isMultipleDay: event?.endDate)) {
+        <span
+          class="px-1 py-0.5 bg-indigo-100 rounded-md mr-1.5 text-center">
+          {{ event?.startDate | date: 'HH:mm':'UTC' }}
+          @if (event?.startDate | isEndDateEqualStartDate: event?.endDate) {
+            <span>-
+              {{ event?.endDate | date: 'HH:mm':'UTC' }}
+            </span>
+          }
+        </span>
+      }
+      <span class="event-title mb-0.5 font-bold">{{ event?.title }}
+      </span>
+    </div>
+    <div class="content mb-2">
+      <div class="event-description line-clamp-2 text-sm">{{ event?.description }}
+      </div>
+      @if (hasParticipant()) {
+        <div class="flex flex-row gap-1 my-0.5">
+          <span class="text-bold">
+            Participants :
+          </span>
+          @for (user of event?.inUser; track user) {
+            <app-event-user [user]="user"></app-event-user>
+          }
+        </div>
+      }
+    </div>
+    <hr>
+      <div class="my-2 flex flex-row gap-1">
+        <button class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
+          (click)="editEvent()">Editer
+        </button>
+        <button
+          class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
+          (click)="deleteEvent()">Supprimer
+        </button>
+      </div>
+      <div class="absolute right-2.5 top-2.5">
+        <button class="text-slate-900 font-extrabold" (click)="closeEvent()">X</button>
+      </div>
+    </div>
+  }
+  @if (isOpen && isEditOpen) {
+    <app-edit-event [event]="event"></app-edit-event>
+  }
