feat(NO-JIRA) Fixed verification, added create event, fixed errors, fixed some logics
Need to fix responsive and add zod schema.
Add docker file

--- a/client/src/app/feature/calendar/index.component.html
+++ b/client/src/app/feature/calendar/index.component.html
@@ -1,11 +1,11 @@
 <div class="container mx-auto my-5">
 	<div class="mb-5">
 		<h1 class="text-3xl font-bold">
-			Calendar App
+			Calendrier
 		</h1>
 	</div>
 	<div class="mb-5">
-		<app-event></app-event>
+		<app-popup-event></app-popup-event>
 	</div>
 	<div class="rounded border-slate-100 border-4 border-solid">
 		<app-calendar (monthChange)="onMonthChange($event)" [days]="days" [month]="month"></app-calendar>
