--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -35,10 +35,19 @@
 				</div>
 				<div class="hidden sm:ml-6 sm:block">
 					<div class="flex space-x-4">
-						<a href="#" class="rounded-md bg-slate-200 px-3 py-2 text-sm font-medium text-slate-950"
+						<a routerLink="/"
+						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950"
+						   routerLinkActive="bg-slate-200 text-slate-950"
+						   [routerLinkActiveOptions]="{ exact: true }"
 						   aria-current="page">Calendar</a>
-						<a href="#"
+						<a routerLink="/events"
+						   routerLinkActive="bg-slate-200 text-slate-950"
+						   [routerLinkActiveOptions]="{ exact: true }"
 						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Events</a>
+						<a routerLink="/events/add"
+						   routerLinkActive="bg-slate-200 text-slate-950"
+						   [routerLinkActiveOptions]="{ exact: true }"
+						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Add</a>
 					</div>
 				</div>
 			</div>
@@ -66,14 +75,10 @@
 	<!-- Mobile menu, show/hide based on menu state. -->
 	<div class="sm:hidden" id="mobile-menu">
 		<div class="space-y-1 px-2 pb-3 pt-2">
-			<a href="#" class="block rounded-md bg-slate-200 px-3 py-2 text-base font-medium text-slate-950"
-			   aria-current="page">Dashboard</a>
-			<a href="#"
-			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Team</a>
-			<a href="#"
-			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Projects</a>
-			<a href="#"
-			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Calendar</a>
+			<a routerLink="/" class="block rounded-md bg-slate-200 px-3 py-2 text-base font-medium text-slate-950"
+			   aria-current="page">Calendar</a>
+			<a routerLink="/events"
+			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Events</a>
 		</div>
 	</div>
 </nav>
