--- a/client/src/app/feature/login/login.component.html
+++ b/client/src/app/feature/login/login.component.html
@@ -7,11 +7,21 @@
 					<label for="email" class="block text-sm font-medium text-gray-700">Email</label>
 					<input type="email" id="email" formControlName="email"
 						   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"/>
+					@if (loginForm.get('email')?.invalid && loginForm.get('email')?.dirty) {
+						<div class="text-red-500 text-sm">
+							L'email est requis et doit être valide.
+						</div>
+					}
 				</div>
 				<div class="mb-4">
-					<label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+					<label for="password" class="block text-sm font-medium text-gray-700">Mot de passe</label>
 					<input type="password" id="password" formControlName="password"
 						   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"/>
+					@if (loginForm.get('password')?.invalid && loginForm.get('password')?.dirty) {
+						<div class="text-red-500 text-sm">
+							Le mot de passe est requis.
+						</div>
+					}
 				</div>
 				<div class="mb-4">
 					<button [disabled]="loginForm.invalid" type="submit"
