--- a/client/src/app/shared/event/event.component.html
+++ b/client/src/app/shared/event/event.component.html
@@ -1,49 +1,42 @@
-@if (isOpen) {
-  <div class="event rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100">
-    <div class="header">
-      @if (!(event?.startDate | isMultipleDay: event?.endDate)) {
-        <span
-          class="px-1 py-0.5 bg-indigo-100 rounded-md mr-1.5 text-center">
-          {{ event?.startDate | date: 'HH:mm':'UTC' }}
-          @if (event?.startDate | isEndDateEqualStartDate: event?.endDate) {
-            <span>-
-              {{ event?.endDate | date: 'HH:mm':'UTC' }}
+<div class="event rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100">
+	<div class="header">
+		@if (!(event?.startDate | isMultipleDay: event?.endDate)) {
+			<span
+				class="px-1 py-0.5 bg-indigo-100 rounded-md mr-1.5 text-center">
+				{{ event?.startDate | date: 'dd/MM/yyyy':'UTC' }} :
+				{{ event?.startDate | date: 'HH:mm':'UTC' }}
+				@if (event?.startDate | isEndDateEqualStartDate: event?.endDate) {
+					<span>-
+						{{ event?.endDate | date: 'HH:mm':'UTC' }}
             </span>
-          }
+				}
         </span>
-      }
-      <span class="event-title mb-0.5 font-bold">{{ event?.title }}
+		} @else {
+			<span
+				class="px-1 py-0.5 bg-indigo-100 rounded-md mr-1.5 text-center">
+		  {{ event?.startDate | date: 'dd/MM/yyyy':'UTC' }}
+				<span>-
+					{{ event?.endDate | date: 'dd/MM/yyyy':'UTC' }}
+		  </span>
+			</span>
+		}
+		<span class="event-title mb-0.5 font-bold">{{ event?.title }}
       </span>
-    </div>
-    <div class="content mb-2">
-      <div class="event-description line-clamp-2 text-sm">{{ event?.description }}
-      </div>
-      @if (hasParticipant()) {
-        <div class="flex flex-row gap-1 my-0.5">
+	</div>
+	<div class="content mb-2">
+		<div class="event-description line-clamp-2 text-sm">{{ event?.description }}
+		</div>
+		@if (hasParticipant()) {
+			<div class="flex flex-row gap-1 my-0.5">
           <span class="text-bold">
             Participants :
           </span>
-          @for (user of event?.inUser; track user) {
-            <app-event-user [user]="user"></app-event-user>
-          }
-        </div>
-      }
-    </div>
-    <hr>
-      <div class="my-2 flex flex-row gap-1">
-        <button class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
-          (click)="editEvent()">Editer
-        </button>
-        <button
-          class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
-          (click)="deleteEvent()">Supprimer
-        </button>
-      </div>
-      <div class="absolute right-2.5 top-2.5">
-        <button class="text-slate-900 font-extrabold" (click)="closeEvent()">X</button>
-      </div>
-    </div>
-  }
-  @if (isOpen && isEditOpen) {
-    <app-edit-event [event]="event"></app-edit-event>
-  }
+				@for (user of event?.inUser; track user) {
+					<app-event-user [user]="user"></app-event-user>
+				}
+				<app-event-user [user]="event?.creator!"></app-event-user>
+			</div>
+		}
+	</div>
+</div>
+
