fix(NO-JIRA) Refactor of calendar && French translation

--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -39,15 +39,16 @@
 						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950"
 						   routerLinkActive="bg-slate-200 text-slate-950"
 						   [routerLinkActiveOptions]="{ exact: true }"
-						   aria-current="page">Calendar</a>
+						   aria-current="page">Calendrier</a>
 						<a routerLink="/events"
 						   routerLinkActive="bg-slate-200 text-slate-950"
 						   [routerLinkActiveOptions]="{ exact: true }"
-						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Events</a>
+						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Evênements</a>
 						<a routerLink="/events/add"
 						   routerLinkActive="bg-slate-200 text-slate-950"
 						   [routerLinkActiveOptions]="{ exact: true }"
-						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Add</a>
+						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Ajouter
+							un event</a>
 					</div>
 				</div>
 			</div>
