--- a/client/src/app/feature/events/index/index.component.html
+++ b/client/src/app/feature/events/index/index.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto my-5">
 	<div class="mb-5">
 		<h1 class="text-3xl font-bold">
-			Events
+			Evênements
 		</h1>
 	</div>
 	<div class="mb-5 flex flex-col gap-2">
