--- a/client/src/app/shared/weeks/weeks.component.html
+++ b/client/src/app/shared/weeks/weeks.component.html
@@ -1,4 +1,4 @@
-<div class="calendar-day-labels mb-1">
+<div class="calendar-day-labels mb-1 text-sm sm:text-sm md:text-base lg:text-xl">
 	@for (day of weeks; track day) {
 		<div class="calendar-day">
 			<p>{{ day }}</p>
