--- a/client/src/app/shared/calendar-toolbar/calendar-toolbar.component.html
+++ b/client/src/app/shared/calendar-toolbar/calendar-toolbar.component.html
@@ -1,11 +1,11 @@
 <div class="calendar-toolbar">
 	<div class="grouped-button">
 		<button
-			class="calendar-toolbar-button rounded-l-md bg-slate-100 px-3 py-2 text-sm font-medium text-slate-950 hover:bg-slate-200"
+			class="calendar-toolbar-button rounded-l-md bg-slate-100 px-3 py-2 text-sm sm:text-sm md:text-base lg:text-basel font-medium text-slate-950 hover:bg-slate-200"
 			(click)="onClickPreviousMonth()">Previous
 		</button>
 		<button
-			class="calendar-toolbar-button rounded-r-md bg-slate-100 hover:bg-slate-200 px-3 py-2 text-sm font-medium text-slate-950"
+			class="calendar-toolbar-button rounded-r-md bg-slate-100 hover:bg-slate-200 px-3 py-2 text-sm sm:text-sm md:text-base lg:text-basefont-medium text-slate-950"
 			(click)="onClickNextMonth()">Next
 		</button>
 	</div>
