feat(NO-JIRA) Fix responsive and error component

--- a/client/src/app/feature/events/create/create.component.html
+++ b/client/src/app/feature/events/create/create.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto my-5">
+<div class="container px-2 sm:px-2 md:px-0 lg:px-0 md:mx-auto lg:mx-auto my-5">
 	<div class="mb-5">
 		<h1 class="text-3xl font-bold">
 			Ajouter un évênement
@@ -6,11 +6,14 @@
 	</div>
 	<div
 		class="mb-5 flex flex-col gap-2 my-1 rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100">
+		@if (error) {
+			<app-error [error]="error"></app-error>
+		}
 		<form [formGroup]="addEventForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-2">
 			<div class="title flex flex-col">
 				<label for="title">Titre</label>
 				<input type="text" id="title" formControlName="title"
-					   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+					   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"
 					   required/>
 				@if (addEventForm.get('title')?.invalid && addEventForm.get('title')?.dirty) {
 					<div class="text-red-500 text-sm">
@@ -21,7 +24,7 @@
 			<div class="description flex flex-col">
 				<label for="description">Description</label>
 				<textarea type="text" id="description" formControlName="description"
-						  class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+						  class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"
 						  required></textarea>
 				@if (addEventForm.get('description')?.invalid && addEventForm.get('description')?.dirty) {
 					<div class="text-red-500 text-sm">
@@ -29,11 +32,11 @@
 					</div>
 				}
 			</div>
-			<div class="event-dates flex flex-row gap-2">
+			<div class="event-dates flex flex-col sm:flex-col md:flex-row lg:flex-row gap-2">
 				<div class="start-date flex flex-col">
 					<label for="startDate">Date de début</label>
 					<input
-						class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+						class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"
 						type="datetime-local" id="startDate" formControlName="startDate" required>
 					@if (addEventForm.get('startDate')?.invalid && addEventForm.get('startDate')?.dirty) {
 						<div class="text-red-500 text-sm">
@@ -44,7 +47,7 @@
 				<div class="end-date flex flex-col">
 					<label for="endDate">Date de fin</label>
 					<input
-						class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+						class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"
 						type="datetime-local" id="endDate" formControlName="endDate" required>
 					@if (addEventForm.get('endDate')?.invalid && addEventForm.get('endDate')?.dirty) {
 						<div class="text-red-500 text-sm">
@@ -60,7 +63,7 @@
 						<div class="flex flex-col gap-1">
 							<div class="flex flex-row gap-1 mb-0.5">
 								<input
-									class="mt-1 block px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+									class="mt-1 block px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"
 									[formControlName]="i" placeholder="Email du participant">
 								<button class="text-slate-950" type="button" (click)="removeParticipant(i)">X</button>
 							</div>
