--- a/client/src/app/shared/day/day.component.html
+++ b/client/src/app/shared/day/day.component.html
@@ -1,7 +1,7 @@
-<div class="day" [class.last-day]="day?.isLastDay" [class.today]="day?.date | isDayToday"
+<div class="day py-2 px-0" [class.last-day]="day?.isLastDay" [class.today]="day?.date | isDayToday"
 	 [class.past-day]="day?.date | isPastDay"
 	 (click)="onClickDay($event)">
-	<div class="day-header text-sm sm:text-sm md:text-base lg:text-xl">
+	<div class="day-header px-2 text-sm sm:text-sm md:text-base lg:text-xl">
 		@if (day?.date | isFirstOrLastDayMonth) {
 			<div class="day-month">
 				{{ day?.date | customFrenchDate: 'MM' }}
@@ -11,7 +11,7 @@
 			<p>{{ day?.date | date: 'd' }}</p>
 		</div>
 	</div>
-	<div class="day-events">
+	<div class="day-events pb-1">
 		@for (event of day?.events; track event.id && event.title) {
 			<app-day-event [event]="event" [day]="day"></app-day-event>
 		}
