--- a/client/src/app/feature/calendar/calendar/calendar.component.css
+++ b/client/src/app/feature/calendar/calendar/calendar.component.css
@@ -3,24 +3,30 @@
 	flex-direction: column;
 	height: 100%;
 	width: 100%;
+	overflow: auto;
 }
 
 .calendar-content {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	flex-grow: 1;
 }
 
 .calendar-days {
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
-	grid-auto-rows: 1fr;
-	grid-gap: 0;
-	column-gap: 5px;
-	row-gap: 5px;
-	position: relative;
+	grid-auto-rows: minmax(150px, 1fr);
+	gap: 5px;
+	flex-grow: 1;
 }
 
 .calendar-header {
 	border-bottom: 5px solid #e2e8f0;
+}
+
+.calendar-days {
+	display: grid;
+	grid-template-columns: repeat(7, 1fr);
+	width: 100%;
 }
