--- a/client/src/app/feature/calendar/index.component.html
+++ b/client/src/app/feature/calendar/index.component.html
@@ -1,11 +1,14 @@
-<div class="container mx-auto my-5">
+<div class="container px-2 sm:px-2 md:px-0 lg:px-0 md:mx-auto lg:mx-auto my-5 overflow-x-hidden">
+	@if (error) {
+		<app-error [error]="error"></app-error>
+	}
 	<div class="mb-5">
 		<h1 class="text-3xl font-bold">
 			Calendrier
 		</h1>
 	</div>
 	<div class="mb-5">
-		<app-popup-event></app-popup-event>
+		<app-popup-event/>
 	</div>
 	<div class="rounded border-slate-100 border-4 border-solid">
 		<app-calendar (monthChange)="onMonthChange($event)" [days]="days" [month]="month"></app-calendar>
