--- a/client/src/app/feature/register/register.component.html
+++ b/client/src/app/feature/register/register.component.html
@@ -6,17 +6,17 @@
 				<div class="mb-4">
 					<label for="name" class="block text-sm font-medium text-gray-700">Name</label>
 					<input type="text" id="name" formControlName="name"
-						   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-slate-700 sm:text-sm"/>
+						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-slate-700 sm:text-sm"/>
 				</div>
 				<div class="mb-4">
 					<label for="email" class="block text-sm font-medium text-gray-700">Email</label>
 					<input type="email" id="email" formControlName="email"
-						   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-slate-700 focus:border-slate-700 sm:text-sm"/>
+						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-700 focus:border-slate-700 sm:text-sm"/>
 				</div>
 				<div class="mb-4">
 					<label for="password" class="block text-sm font-medium text-gray-700">Password</label>
 					<input type="password" id="password" formControlName="password"
-						   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-slate-700 focus:border-slate-700 sm:text-sm"/>
+						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-700 focus:border-slate-700 sm:text-sm"/>
 				</div>
 				<div class="mb-4">
 					<button [disabled]="registerForm.invalid" type="submit"
