--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -4,6 +4,7 @@
 			<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 				<!-- Mobile menu button-->
 				<button type="button"
+						(click)="onClickOpenMobileMenu()"
 						class="relative inline-flex items-center justify-center rounded-md p-2 text-slate-400 hover:bg-slate-200 hover:text-slate-950 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
 						aria-controls="mobile-menu" aria-expanded="false">
 					<span class="absolute -inset-0.5"></span>
@@ -48,12 +49,12 @@
 						   routerLinkActive="bg-slate-200 text-slate-950"
 						   [routerLinkActiveOptions]="{ exact: true }"
 						   class="rounded-md px-3 py-2 text-sm font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Ajouter
-							un event</a>
+							un évênement</a>
 					</div>
 				</div>
 			</div>
 			<div class="absolute inset-y-0 right-0 flex items-center sm:static sm:inset-auto sm:ml-6">
-				<button (click)="onClickOpenNotifications()" type="button"
+				<button (click)="onClickOpenNotifications($event)" type="button"
 						class="relative rounded-full bg-slate-200 p-1 text-gray-400 hover:text-slate-950 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-slate-900">
 					<span class="absolute -inset-1.5"></span>
 					<span class="sr-only">View notifications</span>
@@ -64,7 +65,7 @@
 					</svg>
 				</button>
 				@if (isOpenNotifications) {
-					<div class="relative">
+					<div #notificationsContainer class="relative">
 						<app-notifications [isOpen]="isOpenNotifications"
 										   [notifications]="notifications"></app-notifications>
 					</div>
@@ -74,12 +75,19 @@
 	</div>
 
 	<!-- Mobile menu, show/hide based on menu state. -->
-	<div class="sm:hidden" id="mobile-menu">
+	<div [class.hidden]="!isMobileMenuOpen" class="sm:hidden" id="mobile-menu">
 		<div class="space-y-1 px-2 pb-3 pt-2">
-			<a routerLink="/" class="block rounded-md bg-slate-200 px-3 py-2 text-base font-medium text-slate-950"
+			<a routerLink="/"
+			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950"
+			   routerLinkActive="bg-slate-200 text-slate-950"
+			   [routerLinkActiveOptions]="{ exact: true }"
 			   aria-current="page">Calendar</a>
 			<a routerLink="/events"
 			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Events</a>
+			<a routerLink="/events/add"
+			   routerLinkActive="bg-slate-200 text-slate-950"
+			   class="block rounded-md px-3 py-2 text-base font-medium text-slate-900 hover:bg-slate-200 hover:text-slate-950">Ajouter
+				un évênement</a>
 		</div>
 	</div>
 </nav>
