--- a/client/src/app/shared/day/day.component.css
+++ b/client/src/app/shared/day/day.component.css
@@ -1,20 +1,15 @@
 .day {
-	padding: 10px 0;
 	background: #f8fafc;
 	width: 100%;
+	height: 100%;
 	cursor: pointer;
-	height: 250px;
+	display: flex;
+	flex-direction: column;
 	overflow: hidden;
-
-	&:hover {
-		background: #eef2ff;
-	}
 }
 
-@media (max-width: 768px) {
-	.day {
-		height: 150px;
-	}
+.day:hover {
+	background: #eef2ff;
 }
 
 .last-day {
@@ -25,23 +20,21 @@
 	background: #f0fdf4;
 }
 
+.past-day {
+	background: #f0f9ff;
+}
+
 .day-header {
-	padding: 0 10px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 }
 
-.past-day {
-	background: #f0f9ff;
+.day-events {
+	flex-grow: 1;
+	overflow-y: auto;
 }
 
-.day-events {
-	height: 100%;
-	overflow-y: scroll;
-	padding-bottom: 25px;
-
-	&::-webkit-scrollbar {
-		width: 0;
-	}
+.day-events::-webkit-scrollbar {
+	width: 0;
 }
