--- a/client/src/app/shared/weeks/weeks.component.css
+++ b/client/src/app/shared/weeks/weeks.component.css
@@ -1,12 +1,11 @@
 .calendar-day-labels {
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
-	grid-auto-rows: 1fr;
-	column-gap: 5px;
-	row-gap: 5px;
+	gap: 5px;
+	margin-bottom: 5px;
+}
 
-	.calendar-day {
-		padding: 10px;
-		background-color: #f1f5f9;
-	}
+.calendar-day {
+	padding: 10px;
+	background-color: #f1f5f9;
 }
