--- a/client/src/app/feature/events/create/create.component.html
+++ b/client/src/app/feature/events/create/create.component.html
@@ -1,4 +1,7 @@
 <div class="container px-2 sm:px-2 md:px-0 lg:px-0 md:mx-auto lg:mx-auto my-5">
+	@if (error) {
+		<app-error [error]="error"></app-error>
+	}
 	<div class="mb-5">
 		<h1 class="text-3xl font-bold">
 			Ajouter un évênement
@@ -6,9 +9,6 @@
 	</div>
 	<div
 		class="mb-5 flex flex-col gap-2 my-1 rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100">
-		@if (error) {
-			<app-error [error]="error"></app-error>
-		}
 		<form [formGroup]="addEventForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-2">
 			<div class="title flex flex-col">
 				<label for="title">Titre</label>
@@ -82,7 +82,8 @@
 				</div>
 			</div>
 			<div class="save">
-				<button class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
+				<button [disabled]="addEventForm.invalid"
+						class="text-slate-50 py-0.5 px-2 bg-slate-800 hover:bg-slate-700 rounded-md"
 						type="submit">Créer
 				</button>
 			</div>
