--- a/client/src/app/feature/login/login.component.html
+++ b/client/src/app/feature/login/login.component.html
@@ -1,4 +1,7 @@
 <div class="login container mx-auto justify-center flex flex-col py-12 px-6 lg:px-8">
+	@if (error) {
+		<app-error [error]="error"></app-error>
+	}
 	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 		<h1 class="text-3xl font-bold text-center">Login</h1>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
@@ -30,7 +33,7 @@
 					</button>
 				</div>
 			</form>
-			<a (click)="onClickRegister()" class="cursor-pointer">Register ?</a>
+			<a (click)="onClickRegister()" class="cursor-pointer">Inscription ?</a>
 		</div>
 	</div>
 </div>
