--- a/client/src/app/feature/register/register.component.html
+++ b/client/src/app/feature/register/register.component.html
@@ -1,4 +1,7 @@
 <div class="register container mx-auto justify-center flex flex-col py-12 px-6 lg:px-8">
+	@if (error) {
+		<app-error [error]="error"></app-error>
+	}
 	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 		<h1 class="text-3xl font-bold text-center">Register</h1>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
@@ -25,7 +28,7 @@
 					</button>
 				</div>
 			</form>
-			<a (click)="onClickLogin()" class="cursor-pointer">Login ?</a>
+			<a (click)="onClickLogin()" class="cursor-pointer">Connexion ?</a>
 		</div>
 	</div>
 </div>
