--- a/client/src/app/shared/error/error.component.html
+++ b/client/src/app/shared/error/error.component.html
@@ -1,3 +1,6 @@
-<div class="rounded-md py-2 px-1.5 bg-red-200 border border-2 border-red-400 mb-2">
+<div class="rounded-md py-2 px-1.5 bg-red-200 border border-2 border-red-400 mb-2 relative">
 	<p>{{ error }}</p>
+	<div class="close">
+		<button (click)="onClickCloseError()" class="text-slate-950 absolute right-2.5 top-2.5">X</button>
+	</div>
 </div>
